z-index fixed

--- a/style.css
+++ b/style.css
@@ -191,8 +191,6 @@ main article {
 	left: 0;
 	top: 0;
 	width: 100%;
-	z-index: 999999;
-
 }
 
 .menu .contenedor-botones-menu {
